Added SEO stuff, About Us, other cleanups and improvements... almost there

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
         name="description"
-        content="Dive into the world of Bizz Buzz Comics. Explore original webcomics spanning a variety of genres, created by Bizz Buzz Comics team."
+        content="Dive into the world of Bizz Buzz Comics. Explore original FREE webcomics spanning a variety of genres, created by Bizz Buzz Comics team."
     />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -15,7 +15,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bizz Buzz Comics - Original Webcomics">
-    <meta property="og:description" content="Explore original webcomics from Bizz Buzz Comics. Discover your next favorite comic series today.">
+    <meta property="og:description" content="Explore original webcomics from Bizz Buzz Comics. Discover your next FREE favorite comic series today.">
     <meta property="og:image" content="/logo-top_v2.png">
     <meta property="og:url" content="https://bizzbuzzcomics.com">
 
