Added version title support and bugfix for arrays

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Bizz Buzz Comics - Original Webcomics">
+    <meta property="og:title" content="Bizz Buzz Comics - Original Webcomics - v0.1.{{version}}">
     <meta property="og:description" content="Explore original webcomics from Bizz Buzz Comics. Discover your next FREE favorite comic series today.">
     <meta property="og:image" content="/logo-top_v2.png">
     <meta property="og:url" content="https://bizzbuzzcomics.com">
